--- a/index.html
+++ b/index.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Kanak Bodkhe - Introduction</title>
-</head>
-<body>
-
-    <header>
-        <h1>Kanak Bodkhe</h1>
-        <p>Web Developer | Creative Thinker | Explorer</p>
-    </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello, I'm Your Name. I am passionate about web development and love to explore new technologies. I enjoy turning ideas into reality through code.</p>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <!-- Add more skills as needed -->
-        </ul>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: kanakbodkhe@gmail.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/kanak-bodkhe/" target="_blank">linkedin.com/in/yourname</a></p>
-        <!-- Add more contact information as needed -->
-    </section>
-
-    <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
-    </footer>
-
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Kanak Bodkhe</title>
+    <!-- Add your favicon link here -->
+    <!-- Add your CSS links here -->
+  </head>
+  <body>
+    <div id="__next">
+      <div class="max-w-screen-lg mx-auto p-4 md:p-8">
+        <div class="markdown prose max-w-none">
+          <div>
+            <h1>Kanak Bodkhe</h1>
+            <p>
+              <img src="https://media.licdn.com/dms/image/D4D03AQHImzBsbnL4Iw/profile-displayphoto-shrink_400_400/0/1694677834785?e=1706140800&v=beta&t=QnZ6g6336_EhY9e_NNim5Ns4TdE639MggHD6YXOQCCw" alt="Your Name" />
+            </p>
+            <p>
+              <a href="https://twitter.com/yourtwitter">twitter</a>
+              . <a href="https://github.com/Kanak883">github</a>
+              . <a href="mailto:kanakbodkhe@gmail.com?subject=Hello!">email</a> .
+            </p>
+            <!-- Add your content here -->
+            <!-- Customize the structure based on your preferences -->
+            <p>
+              I'm working on <a href="https://yourproject.com">your project</a>
+              to achieve amazing things. Join
+              <a href="https://yourcompany.com/jobs">us</a>!
+            </p>
+            <p>
+              More details about yourself and your journey in the tech world.
+              Feel free to customize and add your information.
+            </p>
+            <h4>Inspired by <a href="https://www.aryxnsharma.com/">someone</a>, some things I believe:</h4>
+            <ul>
+              <li>Your beliefs or quotes.</li>
+              <li>More thoughts and philosophies.</li>
+              <!-- Add more items as needed -->
+            </ul>
+            <!-- Add more content as needed -->
+            <p>
+              I will probably add more to this page soon. Meanwhile, feel free
+              to say hi on <a href="mailto:kanakbodkhe@gmail.com?subject=Hello!">kanakbodkhe@gmail.com</a>!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Add your script tags here -->
+    <!-- Add any additional scripts or JavaScript dependencies -->
+  </body>
 </html>
