--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               More details about yourself and your journey in the tech world.
               Feel free to customize and add your information.
             </p>
-            <h4>Inspired by <a href="https://www.aryxnsharma.com/">someone</a>, some things I believe:</h4>
+            <h4>Inspired by <a href="https://www.aryxnsharma.com/">Aryan Sharma</a>, some things I believe:</h4>
             <ul>
               <li>Your beliefs or quotes.</li>
               <li>More thoughts and philosophies.</li>
