--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <title>Kanak Bodkhe</title>
     <!-- Add your favicon link here -->
     <!-- Add your CSS links here -->
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        min-height: 100vh;
+        margin: 0;
+      }
+
+      .content-container {
+        max-width: 100%;
+        width: 100%;
+        padding: 4px;
+      }
+    </style>
   </head>
   <body>
-    <div id="__next">
+    <div id="__next" class="content-container">
       <div class="max-w-screen-lg mx-auto p-4 md:p-8">
         <div class="markdown prose max-w-none">
+          <!-- Your existing content -->
           <div>
             <h1>Kanak Bodkhe</h1>
             <p>
