--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- Add your content here -->
             <!-- Customize the structure based on your preferences -->
             <p>
-              I'm working on <a href="https://yourproject.com">your project</a>
+              I'm working on <a href="https://yourproject.com">projects</a>
               to achieve amazing things. Join
               <a href="https://yourcompany.com/jobs">us</a>!
             </p>
