--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <img src="https://media.licdn.com/dms/image/D4D03AQHImzBsbnL4Iw/profile-displayphoto-shrink_400_400/0/1694677834785?e=1706140800&v=beta&t=QnZ6g6336_EhY9e_NNim5Ns4TdE639MggHD6YXOQCCw" alt="Your Name" />
             </p>
             <p>
-              <a href="https://twitter.com/yourtwitter">twitter</a>
+              <a href="https://x.com/bodkhe_kanak?t=LuLEYiN8B-F7LMcWlsJkcg&s=09">twitter</a>
               . <a href="https://github.com/Kanak883">github</a>
               . <a href="mailto:kanakbodkhe@gmail.com?subject=Hello!">email</a> .
             </p>
