--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!-- Add more content as needed -->
             <p>
               I will probably add more to this page soon. Meanwhile, feel free
-              to say hi on <a href="mailto:kanakbodkhe@gmail.com?subject=Hello!">kanakbodkhe@gmail.com</a>!
+              to say hi on <a href="https://discord.com/users/627513315811262474">Discord</a>!
             </p>
           </div>
         </div>
